# ml_demo

./: .gitignore  README.md  environment.yml  pyproject.toml
timnet/: cli.py
timnet/conf/: train.yaml
timnet/dataset/: data.py  dataset.py
timnet/models/: models.py
timnet/training/: train.py
